--- a/templates/add.html
+++ b/templates/add.html
@@ -10,9 +10,27 @@ Add
 
 
 <!------------------------------------------------------------------------------->
-<div class="container">
+<div class="container-fluid-mt-5 px-4">
     <div class="row" style="background-color: #f1f1f1; border:1px solid red; height:100vh">
-        <div class="col-md-9">
+<div class="col-md-3">
+
+<ul class="list-group">
+          <li class="list-group-item">
+            <a class="nav-link" href="#">Введите данные по дефекту</a>
+          </li>
+            <li class="list-group-item">
+            <a class="nav-link" href="#">Введите наименование дефекта</a>
+			</li>
+ 			<li class="list-group-item">
+           <a class="nav-link" href="#">Введите операцию</a>
+          </li>
+ 			<li class="list-group-item">
+           <a class="nav-link" href="#">Введите информацию по изделию</a>
+          </li>
+        </ul>
+
+</div>
+        <div class="col-md-6">
             <div class="form-group">
                 <h2>Введите данные по дефекту</h2>
 
