--- a/templates/add.html
+++ b/templates/add.html
@@ -237,7 +237,7 @@ Add
 <script>
     function getValue() {
         let next = "#2"
-        let a = document.getElementById("form-select1");
+        let a = document.getElementById("form-select");
         //let b = a.value;
         /*   if (a.selectedIndex != -1) {
                //Если есть выбранный элемент, отобразить его значение (свойство value)
