--- a/templates/show.html
+++ b/templates/show.html
@@ -36,7 +36,7 @@ Show
         {% for i in d %}
         <tr>
           <td>{{ i.article }}</td>
-          <td>{{ i.name }}</td>
+          <td>{{ i.product_name }}</td>
           <td>{{ i.defect }}</td>
           <td>{{ i.operation }}</td>
           <td>{{ i.note }}</td>
