--- a/templates/show_defect.html
+++ b/templates/show_defect.html
@@ -103,7 +103,7 @@ Show_defect
                   </svg></button></th>
 
               <td>{{ i.article }}</td>
-              <td>{{ i.name }}</td>
+              <td>{{ i.product_name }}</td>
               <td>{{ i.defect }}</td>
               <td>{{ i.operation }}</td>
               <td><img src="{{ i.note }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>
