--- a/templates/base1.html
+++ b/templates/base1.html
@@ -70,7 +70,10 @@
               <a class="nav-link" href="/show">SHOW</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/add">ADD</a>
+              <a class="nav-link" href="/add_catalog">ADD</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/add">ADD1</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">#</a>
