--- a/templates/show_defect.html
+++ b/templates/show_defect.html
@@ -22,8 +22,6 @@ Show_defect
 <!-- container-fluid-mt-5 px-4 -->
 
 <div class="container-fluid-mt-5 px-4" style="border:0.5px solid rgb(246, 250, 1); margin-top: 80px;">
-
-
   <div class="row" style="height: 85vh;">
     <div class="col-md-3" style="border:0.5px solid grey;">
       <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
@@ -106,7 +104,7 @@ Show_defect
               <td>{{ i.product_name }}</td>
               <td>{{ i.defect }}</td>
               <td>{{ i.operation }}</td>
-              <td><img src="{{ i.note }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>
+              <td><img src="{{ i.picture }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>
               <td>{{ i.note }}</td>
 
             </tr>
