--- a/templates/base1.html
+++ b/templates/base1.html
@@ -43,7 +43,7 @@
     <nav class="navbar px-4 navbar-expand-md navbar-light fixed-top bg-light" style="border:0.5px solid grey;>
       <div class=" container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../static/img/logo/logo.svg" alt="" width="40" height="40">
+        <img src="/static/img/logo/logo.svg" alt="" width="40" height="40">
       </a>
 
       <!-- <a class="navbar-brand" href="#">Адор</a>  -->
@@ -57,7 +57,7 @@
             <a class="nav-link" aria-current="page" href="/">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/show_defect">ДЕФЕКТЫ ПО ВИДАМ</a>
+            <a class="nav-link" href="/show_catalog">ДЕФЕКТЫ ПО ВИДАМ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/show_operation">ДЕФЕКТЫ ПО ОПЕРАЦИЯМ</a>
