--- a/templates/show_catalog.html
+++ b/templates/show_catalog.html
@@ -85,15 +85,15 @@ Show_defect
             </tr>
           </thead>
           <tbody>
-            {% for i in d %}
+            {% for i in catalog %}
             <tr>
-              <th><a href="/show_defect/{{ i.id }}" type="button" class="btn btn-outline-secondary btn-sm "><svg
+              <th><a href="/catalog_list/{{ i.id }}" type="button" class="btn btn-outline-secondary btn-sm "><svg
                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-caret-right" viewBox="0 0 16 16">
                     <path
                       d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />
                   </svg></a></th>
-              <th><button type="submit" name="12" value="{{ i.id }}" class="btn btn-outline-secondary btn-sm "><svg
+              <th><a href="/catalog_list/{{ i.id }}/update" type="submit" name="12" value="{{ i.id }}" class="btn btn-outline-secondary btn-sm "><svg
                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
                     viewBox="0 0 16 16">
                     <path
