--- a/templates/show.html
+++ b/templates/show.html
@@ -37,7 +37,7 @@ Show
         <tr>
           <td>{{ i.article }}</td>
           <td>{{ i.product_name }}</td>
-          <td>{{ i.defect }}</td>
+          <td>{{ i.id_defect }}</td>
           <td>{{ i.operation }}</td>
           <td>{{ i.note }}</td>
           <td><img src="{{ i.note }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>
