--- a/templates/show_catalog.html
+++ b/templates/show_catalog.html
@@ -105,7 +105,7 @@ Show_defect
               <td>{{ i[0].product_name }}</td>
               <td>{{ i[1] }}</td>
               <td>{{ i[0].operation }}</td>
-              <td><img src="{{ i[0].picture }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>
+              <td><img src="/{{ i[0].picture }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>
               <td>{{ i[0].note }}</td>
               <td>{{ i[0].picture }}</td>
               
